tests/baselines/reference/tsxReactEmit4.errors.txt
file.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
file.tsx(12,5): error TS2304: Cannot find name 'blah'.


==== file.tsx (2 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    declare var React: any;
    
    var p: any;
    var openClosed1 = <div>
    
       {blah}
        ~~~~
!!! error TS2304: Cannot find name 'blah'.
    
    </div>;
    
    // Should emit React.__spread({}, p, {x: 0})
    var spread1 = <div {...p} x={0} />;